# personalproject

./: docker-compose.yml  railway.toml  render.yaml
backend/: .env  .env.example  Dockerfile  alembic.ini  index.js  package.json  pyproject.toml  railway.toml  worker.railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: client.py  orchestrator.py  prompts.py  tools.py
backend/app/api/v1/: auth.py  content.py  credits.py  generate.py  onboarding.py  schedules.py  sources.py  webhooks.py  workspaces.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  content_source.py  credit.py  generated_content.py  schedule.py  user.py  workspace.py
backend/app/schemas/: auth.py  content.py  credit.py  schedule.py  source.py  workspace.py
backend/app/services/: auth.py  credit.py  delivery.py  linkedin.py  rss.py  scraper.py  twitter.py
backend/app/tasks/: fetch_sources.py  generate_content.py  send_newsletter.py  worker.py
backend/tests/: test_auth.py  test_credits.py  test_prompts.py
frontend/: Dockerfile  package-lock.json  package.json  railway.toml
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/content/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/lib/: api.ts  auth.ts
(+6 files in other folders)
